--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-openai = "1.1.1"
+openai = "^1.27"
 selenium = "4.15.2"
 pillow = "10.1.0"
 numpy = "^1.26.4"
+litellm = "^1.40.25"
 
 
 [build-system]
